<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ListFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Judul -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/coffee_list"
            android:paddingBottom="8dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="12dp"
            android:background="?android:attr/dividerVertical" />

        <!-- Item List -->
        <TextView
            android:id="@+id/affogato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/affogato_title"
            android:background="?android:attr/selectableItemBackground" />

        <TextView
            android:id="@+id/americano"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/americano_title"
            android:background="?android:attr/selectableItemBackground" />

        <TextView
            android:id="@+id/latte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/latte_title"
            android:background="?android:attr/selectableItemBackground" />

        <TextView
            android:id="@+id/cappuccino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/cappuccino_title"
            android:background="?android:attr/selectableItemBackground" />

        <TextView
            android:id="@+id/espresso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/espresso_title"
            android:background="?android:attr/selectableItemBackground" />

    </LinearLayout>
</ScrollView>
